# bayeswire

./: .gitignore  AGENTS.md  BACKLOG.md  LICENSE  README.md  pyproject.toml
.claude/skills/: rust-style-python
.github/workflows/: ci.yml  cross-repo.yml  cut-tag.yml
.pi/skills/rust-style-python/: SKILL.md
corpus/: eight_schools_non_centered.json
corpus/fixtures/: partially_observed_mvn.json
docs/: invariants.md  monorepo-migration.md  releasing.md  toolchain.html
scripts/: generate_artifact_corpus.py  regenerate_corpus.py
spec/: data-document-v1.md  dimension-sidecar-v1.md  ir-format-v1.md  ir-v1-tags.md  model-data-fingerprint-v1.md
src/bayeswire/: __init__.py  _ir_registry.py  ir.py  math.py
src/bayeswire/constraints/: __init__.py
src/bayeswire/corpus/: README.md  bounded_rates.json  fingerprints.json  hashes.json  linear_regression.json  ordinal_regression.json  partially_observed_mvn.json  varying_intercepts_poisson.json
src/bayeswire/distributions/: __init__.py  _capabilities.py  _symbolic_validation.py  continuous.py  counts.py  multivariate.py  ordinal.py  truncated.py
src/bayeswire/model/: __init__.py  _data_schema.py  _deferred.py  core.py  decorator.py  expr.py
tests/conformance/: reference_models.py  test_artifact_corpus.py  test_produce.py
tests/unit/: _ir_meta.py  test_constraints_metadata_structure.py  test_ir_canonical.py  test_ir_decode.py  test_ir_docs.py  test_ir_encode.py  test_ir_register.py  test_model_data_fingerprint.py  test_no_jax_walk.py  test_package_imports.py  test_public_hooks.py
(+35 files in other folders)
